# watchd

./: LICENSE  README.md  pyproject.toml
src/watchd/: __init__.py  __main__.py  agent.py  app.py  cli.py  config.py  deploy.py  discovery.py  registry.py  runner.py  schedule.py  store.py
tests/: test_app.py  test_cli.py  test_config.py  test_deploy.py  test_discovery.py  test_registry.py  test_runner.py  test_schedule.py  test_store.py
