[project]
name = "watchd"
dynamic = ["version"]
description = "Schedule, run, and track AI agents with zero infra."
readme = "README.md"
license = "MIT"
authors = [
    { name = "level09", email = "level09@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["ai", "agents", "scheduler", "cron", "monitoring", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "apscheduler>=3.10,<4",
    "structlog",
    "cyclopts",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
ai = ["anthropic>=0.40", "openai>=1.50"]

[project.urls]
Homepage = "https://watchd.dev"
Documentation = "https://watchd.dev"
Repository = "https://github.com/level09/watchd"
Issues = "https://github.com/level09/watchd/issues"

[project.scripts]
watchd = "watchd.cli:main"

[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
